# FYP-RayTracer-Backend

./: .gitignore  CMakeLists.txt  README.md
assets/: objects (copy).xml  objects.xml
src/: defs.h  main.cpp
src/engine/: camera.cpp  camera.h  config.h  emissive.cpp  emissive.h  hittable.h  hittable_list.cpp  hittable_list.h  lambertian.cpp  lambertian.h  material.h  mesh.cpp  mesh.h  metal.cpp  metal.h  shpere.cpp  sphere.h  sun.cpp  sun.h  triangle.cpp  triangle.h  world.cpp  world.h
src/engine/factories/: factory_methods.cpp  factory_methods.h
src/util/: ray.h  util.h  vec3.cpp  vec3.h
